General mobile build part 1

--- a/main.css
+++ b/main.css
@@ -1,4 +1,8 @@
 @charset "UTF-8";
+:root {
+  --blue-color: #007bad;
+  --blue-background-color: #007bad;
+}
 input, button {
 	-webkit-appearance: none;
 	-moz-appearance: none;
@@ -58,6 +62,7 @@ body {
 	background: #fff;
 	color: #041226;
 	width: 100%;
+  font-family: 'Haas Grot Text 55 Roman', sans-serif;
 	-webkit-font-smoothing: antialiased;
 }
 ::selection {
@@ -66,6 +71,10 @@ body {
 }
 img::selection {
 	background: #248cbc;
+}
+a {
+  text-decoration: none;
+  color: inherit;
 }
 p {
 	line-height: 1.75em;
@@ -77,14 +86,55 @@ ul {
 	padding: 0;
 }
 .blue {
-	color: #007bad;
+	color: var(--blue-color);
 }
 .background-blue {
-	background: #007bad;
+	background-color: var(--blue-background-color);
+}
+.light-blue {
+  color: #40cbff;
+}
+.background-light-blue {
+  background-color: #40cbff;
+}
+.grey {
+  color: #6a6a6a;
+}
+.white {
+  color: #fff;
+}
+nav {
+  display: grid;
+  grid-template-columns: 200px 1fr 200px;
+  grid-column-gap: 1em;
+  align-items: center;
+  padding: 0.5em 2em;
+}
+nav span[class^="icon-"] {
+  display: inline-block;
+  transform: translateY(0.2em);
+}
+nav span.icon-car {
+  font-size: 2em;
+  transform: translateY(0.3em);
 }
 .constrained {
 	margin: 0 auto;
 	max-width: 1440px;
+}
+.centered {
+  text-align: center;
+}
+.font-smaller {
+  font-size: 0.9em;
+}
+h2 {
+  font-size: 1.1em;
+}
+sup {
+  display: inline-block;
+  font-size: 0.6em;
+  transform: translateY(-0.4em);
 }
 ul li span[class^="icon-"] {
 	display: inline-block;
@@ -95,8 +145,20 @@ ul li span[class^="icon-"] {
 	display: grid;
 }
 .product {
+  position: relative;
 	border-top: 1px solid #e8eae0;
 	padding-top: 1em;
+}
+.favorite-heart {
+  position: absolute;
+  top: 0.5em;
+  right: 0px;
+  font-size: 1.4em;
+}
+.product-prices {
+  font-family: 'Haas Grot Text 55 Roman', sans-serif;
+  font-weight: bold;
+  font-size: 2em;
 }
 .product-details {
 	background: #e8eae0;
@@ -106,6 +168,56 @@ ul li span[class^="icon-"] {
 .product-details ul {
 	font-size: 1.2em;
 	line-height: 1.5em;
+}
+#footer-link-menu > div {
+  margin-bottom: 1em;
+}
+.footer-heading {
+  display: block;
+  position: relative;
+  text-transform: uppercase;
+  text-align: left;
+  padding-bottom: 0.2em;
+  border-bottom: 1px solid rgb(255 255 255 / 50%);
+}
+.footer-heading span {
+  position: absolute;
+  top: 0;
+  right: 0;
+}
+.footer-heading.active {
+  border-bottom: 1px solid transparent;
+}
+.footer-heading.active span {
+  transform: translateY(-0.2em) rotate(180deg);
+}
+.footer-links {
+  overflow: hidden;
+  height: 0;
+}
+.footer-links.active {
+  height: auto;
+}
+.footer-links a {
+  display: block;
+  line-height: 1.5em;
+}
+.social-link {
+  position: relative;
+  display: inline-block;
+  padding: 1em;
+  text-align: center;
+  background: #fff;
+  color: var(--blue-color);
+  font-size: 1.1em;
+  border-radius: 1em;
+  margin: 0 0.4em;
+}
+.social-link span {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -35%);
 }
 @media screen and (max-width:600px) {
 	.padded {
@@ -129,5 +241,10 @@ ul li span[class^="icon-"] {
 	}
 }
 @media screen and (min-width:1025px) {
-
+  h2 {
+    font-size: 1.333em;
+  }
+  .favorite-heart {
+    font-size: 1.7em;
+  }
 }
