--- a/main.css
+++ b/main.css
@@ -77,8 +77,8 @@ a {
   color: inherit;
 }
 p {
-	line-height: 1.75em;
-  font-size: 1.1em;
+	line-height: 1.5em;
+  font-size: 1em;
 }
 ul {
 	list-style-type: none;
@@ -98,25 +98,29 @@ ul {
   background-color: #40cbff;
 }
 .grey {
-  color: #6a6a6a;
+  color: #6e6e6e;
 }
 .white {
   color: #fff;
 }
-nav {
-  display: grid;
-  grid-template-columns: 200px 1fr 200px;
-  grid-column-gap: 1em;
-  align-items: center;
-  padding: 0.5em 2em;
+.black {
+  color: #000;
 }
-nav span[class^="icon-"] {
+.indent {
+  margin-left: 0.6em;
+}
+.button {
   display: inline-block;
-  transform: translateY(0.2em);
-}
-nav span.icon-car {
-  font-size: 2em;
-  transform: translateY(0.3em);
+  background-color: #40cbff;
+  border-radius: 1.5em;
+  color: #fff;
+  text-transform: uppercase;
+  font-size: 0.8em;
+  font-weight: bold;
+  letter-spacing: 0.1em;
+  padding: 0.8em 2em 0.6em 2em;
+  margin: 0.5em 0;
+  transition: background-color 0.3s ease-out;
 }
 .constrained {
 	margin: 0 auto;
@@ -128,8 +132,18 @@ nav span.icon-car {
 .font-smaller {
   font-size: 0.9em;
 }
+.all-caps {
+  letter-spacing: 0.1em;
+  text-transform: uppercase;
+}
+.block {
+  display: block;
+}
+.padded {
+  padding: 3vh;
+}
 h2 {
-  font-size: 1.1em;
+  font-size: 1.2em;
 }
 sup {
   display: inline-block;
@@ -141,36 +155,212 @@ ul li span[class^="icon-"] {
 	margin-right: 0.5em;
 	transform: translateY(0.2em);
 }
+.mobile-hide {
+  display: none;
+}
+#main-bar {
+  padding: 0.5em 1em;
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  grid-column-gap: 2em;
+  align-items: center;
+}
+#logo {
+  font-size: 0.9em;
+  text-transform: uppercase;
+}
+#logo-on {
+  font-size: 1.4em;
+  font-weight: bold;
+}
+#logo-point {
+  font-size: 1.4em;
+  font-weight: bold;
+  font-style: italic;
+}
+#user-welcome {
+  display: none;
+}
+#main-links {
+  text-align: right;
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr;
+  align-items: center;
+}
+#main-links a {
+  margin-left: 1em;
+  font-size: 1.5em;
+  margin-bottom: -0.5em;
+}
+#main-links .icon-car {
+  font-size: 1.8em;
+}
+#search-bar {
+  padding: 1em 1em 0.5em 1em;
+  display: grid;
+  grid-template-rows: 1fr 1fr;
+  grid-row-gap: 1em;
+}
+#search-container {
+  position: relative;
+}
+#search-container input {
+  width: 100%;
+  background-color: #fff;
+  border: none;
+  font-size: 1em;
+  padding: 0.2em 0.5em;
+  box-sizing: border-box;
+}
+#search-container .icon-search {
+  position: absolute;
+  top: 0.4em;
+  right: 0.5em;
+}
+#search-results {
+  position: absolute;
+  top: -1000px;
+  left: 0;
+  min-width: 100%;
+  padding: 1em;
+  background: #fff;
+  border: 1px solid #dcdcdc;
+  z-index: 100;
+  opacity: 0;
+  transition: opacity 0.3s ease-out, top 0s;
+}
+#search-results.active {
+  top: 1.5em;
+  opacity: 1;
+}
+#showroom-text-count {
+  display: none;
+}
+#filters {
+  font-size: 0.8em;
+  text-align: center;
+}
+#filters a:first-of-type {
+  margin-right: 1em;
+}
+#filters a .icon-caret-down {
+  display: inline-block;
+  transform: translateY(0.2em);
+}
 .product-grid {
-	display: grid;
+  display: grid;
+  grid-template-columns: 1fr;
+  grid-gap: 3vh;
+  padding: 3vh 1em;
 }
 .product {
+  display: grid;
   position: relative;
 	border-top: 1px solid #e8eae0;
 	padding-top: 1em;
+}
+.product-bottom {
+  align-self: flex-end;
 }
 .favorite-heart {
   position: absolute;
   top: 0.5em;
   right: 0px;
   font-size: 1.4em;
+  transition: color 0.3s ease-out;
 }
-.product-prices {
+.special {
+  margin: 0.5em 0 1.5em 0;
+}
+.special-flag {
+  position: relative;
+  display: inline-block;
+  padding: 0.5em 1em 0.5em 1em;
+  margin-right: 1em;
+}
+.special-flag:after {
+  position: absolute;
+  top: .35em;
+  right: -0.7em;
+  content: '';
+  display: block;
+  width: 1.4em;
+  height: 1.4em;
+  background: var(--blue-background-color);
+  transform: rotate(45deg);
+}
+.special-price {
+  position: relative;
+  font-size: 1.8em;
+  transform: translateY(0.1em);
+}
+.strikethrough {
+  display: inline-block;
+  position: relative;
+}
+.strikethrough:after {
+  content: '';
+  display: block;
+  position: absolute;
+  top: 50%;
+  width: 110%;
+  height: 2px;
+  background: var(--blue-background-color);
+  transform: rotate(-12deg);
+}
+.expires {
+  display: block;
+  margin-top: 0.5em;
+  font-size: 0.9em;
+}
+.product-price {
   font-family: 'Haas Grot Text 55 Roman', sans-serif;
   font-weight: bold;
   font-size: 2em;
 }
+.price-block {
+  padding-bottom: 0.5em;
+  border-bottom: 1px solid #e8eae0;
+  margin-bottom: 0.5em;
+}
+.price-block + .price-block {
+  padding-top: 0.5em;
+}
+.product-finishes {
+  margin: 1em 0;
+}
+.finish {
+  display: grid;
+  grid-template-columns: 2em 1fr;
+  grid-gap: 0.5em;
+  align-items: center;
+}
+.swatch {
+  display: inline-block;
+  width: 2em;
+  height: 1em;
+  border: 1px solid #6e6e6e;
+}
+.silver {
+  background-color: #d8d8d8;
+}
+.obsidian {
+  background-color: #000;
+}
 .product-details {
 	background: #e8eae0;
 	color: #969696;
-	padding: 5vh 3vh 3vh 3vh;
+	padding: 2vh 3vh 3vh 3vh;
 }
 .product-details ul {
-	font-size: 1.2em;
+	font-size: 1.1em;
 	line-height: 1.5em;
 }
-#footer-link-menu > div {
-  margin-bottom: 1em;
+#footer-three-column {
+  display: grid;
+  grid-template-columns: 1fr;
+  grid-row-gap: 1em;
+  margin-bottom: 3vh;
 }
 .footer-heading {
   display: block;
@@ -191,16 +381,26 @@ ul li span[class^="icon-"] {
 .footer-heading.active span {
   transform: translateY(-0.2em) rotate(180deg);
 }
-.footer-links {
-  overflow: hidden;
-  height: 0;
-}
-.footer-links.active {
-  height: auto;
-}
-.footer-links a {
-  display: block;
+#footer-main-links {
   line-height: 1.5em;
+}
+#footer-main-links a {
+  display: block;
+}
+#footer-phone {
+  display: block;
+  margin-bottom: 0.5em;
+}
+#social-links {
+  text-align: center;
+}
+.mobile-menu {
+  height: 0;
+  overflow: hidden;
+}
+.mobile-menu.active {
+  height: auto;
+  margin-top: 0.5em;
 }
 .social-link {
   position: relative;
@@ -220,31 +420,166 @@ ul li span[class^="icon-"] {
   transform: translate(-50%, -35%);
 }
 @media screen and (max-width:600px) {
-	.padded {
-		padding: 3vh;
-	}
-	.product-grid {
-		grid-template-columns: 1fr;
-		grid-gap: 3vh;
-	}
+
 }
 @media screen and (min-width:601px) {
 	.padded {
 		padding: 5vh;
 	}
+  #main-bar {
+    grid-template-columns: 1fr 30%;
+  }
+  .product-grid {
+    padding: 5vh 3vh;
+  }
 	.product-details ul {
 		column-count: 2;
 	}
-	.product-grid {
-		grid-template-columns: 1fr 1fr;
-		grid-gap: 5vh;
-	}
+  .product-prices {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+  }
 }
 @media screen and (min-width:1025px) {
   h2 {
     font-size: 1.333em;
   }
+  .mobile-hide {
+    display: inline-block;
+  }
+  #main-bar {
+    grid-template-columns: 15% 1fr 1fr;
+  }
+  #user-welcome {
+    display: block;
+    text-align: right;
+  }
+  #user-welcome .icon-caret-down {
+    display: inline-block;
+    transform: translateY(0.2em);
+  }
+  #main-links {
+    grid-template-columns: 1fr 1fr;
+    text-align: left;
+  }
+  #main-links a .smaller {
+    display: inline-block;
+    font-size: 0.7em;
+    margin-left: 0.5em;
+    transform: translateY(-0.4em);
+  }
+  #main-links #my-lease {
+    transform: translateY(-0.8em);
+  }
+  #account-link {
+    display: none;
+  }
+  #search-bar {
+    padding: 1em;
+    grid-template-rows: 1fr;
+    grid-template-columns: 25% 1fr 25%;
+    grid-column-gap: 3vh;
+    align-items: center;
+  }
+  #showroom-text-count {
+    display: block;
+    text-align: center;
+  }
+  #filters {
+    text-align: right;
+  }
   .favorite-heart {
     font-size: 1.7em;
+  }
+  .product-grid {
+		grid-template-columns: 1fr 1fr;
+		grid-gap: 5vh;
+	}
+  .product-top-level {
+    display: grid;
+    grid-template-columns: 40% 60%;
+    grid-gap: 5vh;
+  }
+  .product-prices {
+    display: block;
+  }
+  .special-flag:after {
+    top: 6px;
+    right: -13px;
+  }
+  .sorry {
+    font-size: 1.3em;
+    max-width: 50%;
+    margin-top: 2em;
+  }
+  #footer-link-menu {
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+    grid-column-gap: 5vh;
+  }
+  .footer-heading {
+    border-bottom: none;
+    margin-bottom: 1em;
+  }
+  .footer-heading .icon-caret-down {
+    display: none;
+  }
+  .footer-links {
+    height: auto;
+    text-align: left;
+  }
+  .footer-links a {
+    display: block;
+  }
+  #footer-three-column {
+    grid-template-columns: 1fr 1fr 1fr;
+    grid-gap: 3vh;
+    padding: 0 1em;
+  }
+  .mobile-menu {
+    height: auto;
+  }
+  #info-links {
+    columns: 3;
+  }
+  #contact-links {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    grid-column-gap: 2em;
+    justify-content: flex-start;
+  }
+  #footer-links-menu {
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+    grid-gap: 5vh;
+    margin-bottom: 2vh;
+  }
+  #footer-main-links {
+    columns: 3;
+  }
+  #footer-contact-links {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+  }
+}
+@media screen and (min-width:1441px) {
+  .product-grid {
+    padding: 5vh 1em;
+  }
+}
+@media (hover:hover) {
+  a:hover {
+    text-decoration: underline;
+  }
+  #main-links a:hover {
+    text-decoration: none;
+  }
+  .favorite-heart:hover {
+    text-decoration: none;
+    color: var(--blue-color);
+  }
+  .button:hover {
+    text-decoration: none;
+    background-color: var(--blue-background-color);
   }
 }
